--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
+            <h2 class="mb-4">My Projects</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
@@ -479,7 +479,7 @@
           </div>
         </div>
 
-        <div class="row d-flex contact-info mb-5">
+        <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
@@ -584,7 +584,7 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Cairo, Egypt</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Ring Road, EI Katameya, Cairo, Egypt</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+02 01118996898</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">mohammref312@gmail.com</span></a></li>
 	              </ul>
