--- a/index.html
+++ b/index.html
@@ -101,12 +101,11 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Software developer specializing in Unity, Virtual Reality, AR, and mobile games with production. I’ve been programming games for over five years on a variety of platforms. I have a solid understanding of programming fundamentals and design patterns in software. I also have a keen eye for other areas of design - be it related to UX, art, or gameplay logic. I am able to quickly create a well-structured, self-documenting code that is flexible and prepared for project evolutions. I’ve worked to tight deadlines on a raft of top budget productions for companies.</p>
+		            <p>Passionate Unity developer with 5+ years creating immersive experiences in VR, AR, and mobile games. Expertise in programming, design patterns, and a commitment to delivering high-quality projects.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Mohamed Refaat</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>June 05, 1996</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Ring Road, EI Katameya, Cairo, Egypt</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>Mohammref312@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+02-01118996898</span></li>
 		            </ul>
@@ -115,7 +114,7 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="120">0</span>
+	                <span class="number" data-number="80">0</span>
 	                <span>Project complete</span>
                 </p>
                 <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
@@ -132,23 +131,24 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p>Experienced software developer specializing in Unity, with a focus on Virtual Reality, Augmented Reality, and mobile games. Proven track record of contributing to top-budget productions, meeting tight deadlines, and demonstrating proficiency in programming fundamentals and design patterns. Possesses a keen eye for design aspects, including UX, art, and gameplay logic. Known for quickly creating well-structured, self-documenting code adaptable to project evolutions.</p>
           </div>
         </div>
     		<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Master Degree of Design</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">2016-2017</span>
+    					<h2>Virtual Reality Nanodegree.</h2>
+    					<span class="position">Udacity</span>
+    					<p class="mt-4">Earned Udacity's 6-month Virtual Reality Nanodegree, mastering Unity, C#, and VR application development. Completed hands-on projects, optimizing 3D environments and perfecting user experiences. Benefit from personalized feedback, community collaboration, and industry insights, empowering me with essential skills for cutting-edge virtual reality creation.</p>
     				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Bachelor's Degree of C.A</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                    <div class="resume-wrap ftco-animate">
+    					<span class="date">2017-2018</span>
+    					<h2>Bachelor's Degree of Computer Science and AI</h2>
+    					<span class="position">Banha University</span>
+    					<p class="mt-4">Successfully completed a rigorous program, gaining proficiency in core computer science principles. Acquired expertise in algorithmic design, data structures, software engineering, and problem-solving. Demonstrated strong analytical and coding skills through various projects. Graduated with a solid foundation for diverse applications in the ever-evolving field of computer science.</p>
     				</div>
+    				
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2014-2015</span>
     					<h2>Diploma in Computer</h2>
@@ -547,7 +547,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Experienced Unity developer with 5+ years in VR, AR, and mobile games. Proficient in programming, design patterns, and versatile in meeting tight deadlines for top-budget productions.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
