--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
     					<p class="mt-4">Earned Udacity's 6-month Virtual Reality Nanodegree, mastering Unity, C#, and VR application development. Completed hands-on projects, optimizing 3D environments and perfecting user experiences. Benefit from personalized feedback, community collaboration, and industry insights, empowering me with essential skills for cutting-edge virtual reality creation.</p>
     				</div>
                     <div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Art &amp; Creative Director</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">2017-2018</span>
+    					<h2>Algorithms Specialization</h2>
+    					<span class="position">Stanford University Online Courses</span>
+    					<p class="mt-4">Learn To Think Like A Computer Scientist. Master the fundamentals of the design and analysis of algorithms.</p>
     				</div>
                     
     			</div>
