--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<p class="mb-0"><a href="https://wa.me/01118996898?text=Hello,%20I%20would%20like%20to%20hire%20you%20for%20my%20project." target="_blank" class="btn btn-primary py-3 px-5">Hire me</a></p>
 					</div>
 				</div>
 			</div>
@@ -516,7 +516,7 @@
                 <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
               </div>
               <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                <a href="https://wa.me/01118996898?text=Hello,%20I%20would%20like%20to%20hire%20you%20for%20my%20project." target="_blank" class="btn btn-primary py-3 px-5">Hire me</a>
               </div>
             </form>
           
@@ -538,9 +538,13 @@
               <h2 class="ftco-heading-2">About</h2>
               <p>Experienced Unity developer with 5+ years in VR, AR, and mobile games. Proficient in programming, design patterns, and versatile in meeting tight deadlines for top-budget productions.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://twitter.com/mohammref" target="_blank"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100008107683324" target="_blank"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/mohammref/" target="_blank"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://youtube.com/playlist?list=PL-dAP2-PcR0aGjIKVtSlX_21uDcLsx-l-&si=KHzbTA05JG4G1vTm" target="_blank"><span class="icon-youtube"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/mohammref/" target="_blank"><span class="icon-linkedin"></span></a></li>
+
+
               </ul>
             </div>
           </div>
