--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Mohamed Refaat</span></h1>
 			            <h2 class="mb-4">A XR Developer</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> 
+						<a href="https://youtube.com/playlist?list=PL-dAP2-PcR0aGjIKVtSlX_21uDcLsx-l-&si=yXZ1SEm7Nk6WJU5A" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -117,7 +118,7 @@
 	                <span class="number" data-number="80">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="https://mohammref.github.io/assets/My Resume/pdf" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
+                <p><a href="https://drive.google.com/file/d/11UKnIzGdbkfOenyil4OGXNCGvO43lpVY/view?usp=drive_link" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -169,7 +170,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/11UKnIzGdbkfOenyil4OGXNCGvO43lpVY/view?usp=drive_link" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -339,13 +340,7 @@ Specializing in XR application development, I create immersive experiences tailo
             <div class="col-md-12 heading-section text-center ftco-animate"> 
                 <h1 class="big big-2">Projects</h1> 
                 <h2 class="mb-4">My Projects</h2> 
-                <p>Explore a diverse array of my XR ventures, showcasing expertise in VR/AR application development, game design, and educational content creation. Each project reflects innovative solutions, technological prowess, and a commitment to delivering immersive experiences that engage, educate, and captivate users.
-
-
-
-
-
-</p> 
+                <p>Explore a diverse array of my XR ventures, showcasing expertise in VR/AR application development, game design, and educational content creation. Each project reflects innovative solutions, technological prowess, and a commitment to delivering immersive experiences that engage, educate, and captivate users.</p> 
             </div> 
         </div> 
         <div class="row"> 
@@ -474,7 +469,8 @@ Specializing in XR application development, I create immersive experiences tailo
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Hi, I'm Mohamed Refaat, an XR developer from Cairo, Egypt. I create immersive and interactive experiences using VR, AR, and MR technologies. I have experience developing XR applications for various platforms and devices. If you have an XR project in mind, contact me using any of the methods below. I look forward to hearing from you!
+</p>
           </div>
         </div>
 
