--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Mohamed Refaat</span></h1>
-			            <h2 class="mb-4">A XR Developer</h2>
+			            <h2 class="mb-4">A XR Software Engineer</h2>
 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> 
 						<a href="https://youtube.com/playlist?list=PL-dAP2-PcR0aGjIKVtSlX_21uDcLsx-l-&si=yXZ1SEm7Nk6WJU5A" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
@@ -213,7 +213,7 @@ Specializing in XR application development, I create immersive experiences tailo
 								<i class="flaticon-ideas"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">mixed Reality</h3>
+								<h3 class="mb-5">Mixed Reality</h3>
 							</div>
 						</a>
 					</div>
@@ -418,7 +418,7 @@ Specializing in XR application development, I create immersive experiences tailo
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="100">0</strong>
+                <strong class="number" data-number="10">0</strong>
                 <span>Awards</span>
               </div>
             </div>
@@ -426,7 +426,7 @@ Specializing in XR application development, I create immersive experiences tailo
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="1200">0</strong>
+                <strong class="number" data-number="80">0</strong>
                 <span>Complete Projects</span>
               </div>
             </div>
@@ -434,7 +434,7 @@ Specializing in XR application development, I create immersive experiences tailo
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="1200">0</strong>
+                <strong class="number" data-number="100">0</strong>
                 <span>Happy Customers</span>
               </div>
             </div>
@@ -442,7 +442,7 @@ Specializing in XR application development, I create immersive experiences tailo
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="500">0</strong>
+                <strong class="number" data-number="20">0</strong>
                 <span>Cups of coffee</span>
               </div>
             </div>
@@ -456,7 +456,7 @@ Specializing in XR application development, I create immersive experiences tailo
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+						<p>As an XR software engineer, I design, develop, and test immersive applications for various platforms, using cutting-edge tools and technologies.</p>
 						<p class="mb-0"><a href="https://wa.me/01118996898?text=Hello,%20I%20would%20like%20to%20hire%20you%20for%20my%20project." target="_blank" class="btn btn-primary py-3 px-5">Hire me</a></p>
 					</div>
 				</div>
@@ -571,10 +571,10 @@ Specializing in XR application development, I create immersive experiences tailo
               <h2 class="ftco-heading-2">Services</h2>
               <ul class="list-unstyled">
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>XR Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Mixed Reality</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Augmented Reality</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Game development</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Unity3D</a></li>
               </ul>
             </div>
           </div>
