--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 	        </ul>
 	      </div>
 	    </div>
-	  </nav>
-	  <section id="home-section" class="hero">
+	</nav>
+	<section id="home-section" class="hero">
 		  <div class="home-slider  owl-carousel">
 	      <div class="slider-item ">
 	      	<div class="overlay"></div>
@@ -125,7 +125,7 @@
         </div>
     	</div>
     </section>
-
+<!-- Resume Sections -->
     <section class="ftco-section ftco-no-pb" id="resume-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
@@ -175,15 +175,14 @@
     		</div>
     	</div>
     </section>
-
+<!-- Services Sections -->
     <section class="ftco-section" id="services-section">
     	<div class="container">
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Services</h1>
             <h2 class="mb-4">Services</h2>
-            <p>
-Specializing in XR application development, I create immersive experiences tailored to your needs. From training simulations to industry-specific solutions, my expertise extends to XR game development and educational content creation. Transform ideas into captivating XR realities that engage, educate, and leave a lasting impact.</p>
+            <p>Specializing in XR application development, I create immersive experiences tailored to your needs. From training simulations to industry-specific solutions, my expertise extends to XR game development and educational content creation. Transform ideas into captivating XR realities that engage, educate, and leave a lasting impact.</p>
           </div>
         </div>
     		<div class="row">
@@ -244,7 +243,7 @@ Specializing in XR application development, I create immersive experiences tailo
 								<i class="flaticon-ideas"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Product Strategy</h3>
+								<h3 class="mb-5">Game Development</h3>
 							</div>
 						</a>
 					</div>
@@ -252,17 +251,17 @@ Specializing in XR application development, I create immersive experiences tailo
     	</div>
     </section>
 
-		
-		<section class="ftco-section" id="skills-section">
-			<div class="container">
-				<div class="row justify-content-center pb-5">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Skills</h1>
-            <h2 class="mb-4">My Skills</h2>
-            <p>Discover my proficiency in cutting-edge XR technologies, including Unity3D, C#, and AR/VR frameworks. From 3D modeling to spatial computing, my skill set spans the spectrum, ensuring the creation of immersive experiences. Explore a foundation built on technical prowess, creativity, and a commitment to pushing XR boundaries.</p>
-          </div>
-        </div>
-				<div class="row">
+	<!-- Skill Sections -->
+	<section class="ftco-section" id="skills-section">
+		<div class="container">
+			<div class="row justify-content-center pb-5">
+		<div class="col-md-12 heading-section text-center ftco-animate">
+		<h1 class="big big-2">Skills</h1>
+		<h2 class="mb-4">My Skills</h2>
+		<p>Discover my proficiency in cutting-edge XR technologies, including Unity3D, C#, and AR/VR frameworks. From 3D modeling to spatial computing, my skill set spans the spectrum, ensuring the creation of immersive experiences. Explore a foundation built on technical prowess, creativity, and a commitment to pushing XR boundaries.</p>
+		</div>
+	</div>
+			<div class="row">
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
 							<h3>Unity Engine</h3>
@@ -329,11 +328,11 @@ Specializing in XR application development, I create immersive experiences tailo
 							</div>
 						</div>
 					</div>
-				</div>
 			</div>
-		</section>
+		</div>
+	</section>
  
-
+<!-- Projects Sections -->
 <section class="ftco-section ftco-project" id="projects-section"> 
     <div class="container"> 
         <div class="row justify-content-center pb-5"> 
@@ -344,9 +343,9 @@ Specializing in XR application development, I create immersive experiences tailo
             </div> 
         </div> 
         <div class="row"> 
-            <div class="col-md-4"> 
-                <a href="https://www.youtube.com/playlist?list=PL-dAP2-PcR0ZpUz28USQUIKxHt-dh3ZBx" target="_blank"> 
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);"> 
+            <div class="col-md-4">         
+                <a href="#" target="_blank" > 
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);" data-toggle="modal" data-target="#project-modal"> 
                         <div class="overlay"></div> 
                         <div class="text text-center p-4"> 
                             <h3><a href="#">First Aid </a></h3> 
@@ -356,10 +355,10 @@ Specializing in XR application development, I create immersive experiences tailo
                 </a> 
             </div> 
             <div class="col-md-8"> 
-                <a href="https://www.youtube.com/playlist?list=PL-dAP2-PcR0YCI2CitkSX_K5D6RuHSDfC" target="_blank"> 
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);"> 
+                <a href="#" target="_blank"> 
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);"data-video="https://youtu.be/wWOc5NWZnwc" data-toggle="modal" data-target="#videoModal"> 
                         <div class="overlay"></div> <div class="text text-center p-4"> 
-                            <h3><a href="#">Saftey on Constriction Sites</a></h3> 
+                            <h3><a href="#">Safety on Constriction Sites</a></h3> 
                             <span>VR Application</span> 
                         </div> 
                     </div> 
@@ -370,7 +369,7 @@ Specializing in XR application development, I create immersive experiences tailo
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);"> 
                         <div class="overlay"></div> 
                         <div class="text text-center p-4"> 
-                            <h3><a href="#">Weapon disAssemable &amp; assemable &amp; Shooting Range</a>
+                            <h3><a href="#">Weapon disAssemble &amp; assemble &amp; Shooting Range</a>
                             </h3> <span>VR Application</span>
                         </div> 
                     </div> 
@@ -390,9 +389,7 @@ Specializing in XR application development, I create immersive experiences tailo
                                             </h3> <span>Web Design</span> 
                                         </div> 
                                     </div> 
-                                </a> 
-                            </div> 
-                                <div class="col-md-12"> 
+                                </a></div> <div class="col-md-12"> 
                                     <a href="https://www.youtube.com/watch?v=VideoID" target="_blank"> 
                                         <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);"> 
                                             <div class="overlay"></div> 
@@ -409,7 +406,7 @@ Specializing in XR application development, I create immersive experiences tailo
                 </div> 
             </section>
 
-
+<!-- Projects Sections End -->
     
 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
@@ -607,7 +604,9 @@ Specializing in XR application development, I create immersive experiences tailo
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1L_dstPt3HV5HzF6Gvk/e3s4Wz6iJgD/+ub2oU" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBud7TlRbs/ic4AwGcFZOxg5DpPt8EgeUIgIwzjWfXQKWA3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
@@ -622,6 +621,57 @@ Specializing in XR application development, I create immersive experiences tailo
   <script src="js/scrollax.min.js"></script>
   
   <script src="js/main.js"></script>
+  <script src="js/Popup.js"></script>
     
+<div id="project-modal" class="modal fade">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modalcontent">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h4 class="-title" id="project-card-title-1">Project Title 1</h4>
+        </div>
+        <div class="card-body">
+          <p id="project-card-description-1">Project description goes here 1. You can include images, videos, and other media to showcase the project.</p>
+          <div class="embed-responsive embed-responsive-16by9">
+            <video class="embed-responsive-item" controls>
+              <source src="https://www.youtube.com/watch?v=5WaGmNDrekg" type="video/mp4">
+              Sorry, your browser doesn't support the video tag.
+            </video>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Add more cards for other projects -->
+  </div>
+
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="myModalLabel">Weapon disAssemble &amp; assemble &amp; Shooting Range</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="" allowfullscreen></iframe>
+        </div>
+        <p class="mt-3">This is a VR application that allows users to learn how to disassemble and assemble different types of weapons, as well as practice shooting in a virtual range. The application uses realistic physics and sound effects to create an immersive and engaging experience.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
   </body>
 </html>
