project section modeified

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4  video description" data-video="https://www.youtube.com/embed/Ug3ewC62Sa8" description="hello" data-toggle="modal" data-target="#videoModal">
+                <div class="col-md-4  video" data-video="https://www.youtube.com/embed/Ug3ewC62Sa8" data-description="This is a VR application that teaches users how to perform basic first aid skills in emergency situations." data-title="First Aid" data-toggle="modal" data-target="#videoModal">
                     <a target="_blank">
                         <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
                             <div class="overlay"></div>
@@ -356,7 +356,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-8 video description" data-video="https://www.youtube.com/embed/3selk4rsfS0" description="5jjjjjjjjjjjjjj" data-toggle="modal" data-target="#videoModal">
+                <div class="col-md-8 video" data-video="https://www.youtube.com/embed/3selk4rsfS0" data-description="Safety on Constriction Sites" data-title="Safety on Constriction Sites" data-toggle="modal" data-target="#videoModal">
                     <a target="_blank">
                         <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
                             <div class="overlay"></div>
@@ -368,7 +368,7 @@
                     </a>
                 </div>
                 <div class="col-md-8">
-                        <div class="project img ftco-animate d-flex justify-content-center align-items-center video" style="background-image: url(images/project-1.jpg);" data-video="https://www.youtube.com/embed/zvvkiLfXqEU" description="This is a VR application that allows users to learn how to disassemble and assemble different types of weapons, as well as practice shooting in a virtual range. The application uses realistic physics and sound effects to create an immersive and engaging experience." data-toggle="modal" data-target="#videoModal">
+                        <div class="project img ftco-animate d-flex justify-content-center align-items-center video" style="background-image: url(images/project-1.jpg);" data-video="https://www.youtube.com/embed/zvvkiLfXqEU" data-description="This is a VR application that allows users to learn how to disassemble and assemble different types of weapons, as well as practice shooting in a virtual range. The application uses realistic physics and sound effects to create an immersive and engaging experience." data-title="Weapon disAssemble &amp; assemble &amp; Shooting Range" data-toggle="modal" data-target="#videoModal">
                             <div class="overlay"></div>
                             <div class="text text-center p-4">
                                 <h3>
@@ -376,7 +376,7 @@
                                 </h3> <span>VR Application</span>
                             </div>
                         </div>
-                        <div class="project img ftco-animate d-flex justify-content-center align-items-center video" style="background-image: url(images/project-6.jpg);"data-video="https://www.youtube.com/embed/jBNhphdaMmI" description="mmmmmmmmmmmmmmmmmmm" data-toggle="modal" data-target="#videoModal">
+                        <div class="project img ftco-animate d-flex justify-content-center align-items-center video" style="background-image: url(images/project-6.png);"data-video="https://www.youtube.com/embed/jBNhphdaMmI" data-description="Omani Culture" data-title="Omani Culture" data-toggle="modal" data-target="#videoModal">
                             <div class="overlay"></div>
                             <div class="text text-center p-4">
                                 <h3><a>Omani Culture</a></h3>
@@ -386,7 +386,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="row">
-                        <div class="col-md-12 video" data-video="https://www.youtube.com/embed/e0EA8qgiu8Q" description="ttttttttttttttttt" data-toggle="modal" data-target="#videoModal">
+                        <div class="col-md-12 video" data-video="https://www.youtube.com/embed/e0EA8qgiu8Q" data-description="16-valve four-cylinder engine" data-title="16-valve four-cylinder engine" data-toggle="modal" data-target="#videoModal">
                                 <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
                                     <div class="overlay"></div>
                                     <div class="text text-center p-4">
@@ -396,8 +396,8 @@
                                     </div>
                                 </div>
                         </div>
-                        <div class="col-md-12 video" data-video="https://www.youtube.com/embed/6iTcABA1FiA" description="mmmmmmmmmmmmmmmmmmm" data-toggle="modal" data-target="#videoModal">
-                                <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+                        <div class="col-md-12 video" data-video="https://www.youtube.com/embed/6iTcABA1FiA" data-description="Omani Designer" data-title="Omani Designer" data-toggle="modal" data-target="#videoModal">
+                                <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.png);">
                                     <div class="overlay"></div>
                                     <div class="text text-center p-4">
                                         <h3><a>Omani Designer</a></h3>
@@ -666,7 +666,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="myModalLabel">Weapon disAssemble &amp; assemble &amp; Shooting Range</h5>
+                    <h5 class="modal-title" id="myModalLabel"></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -675,7 +675,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item" src="" allowfullscreen></iframe>
                     </div>
-                    <p class="mt-3">This is a VR application that teaches users how to perform basic first aid skills in emergency situations.</p>
+                    <p class="mt-3"></p>
                 </div>
                 
             </div>
