--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4  video" data-video="https://www.youtube.com/embed/Ug3ewC62Sa8" data-description="This is a VR application that teaches users how to perform basic first aid skills in emergency situations." data-title="First Aid" data-toggle="modal" data-target="#videoModal">
+                <div class="col-md-4  video" data-video="https://www.youtube.com/embed/Ug3ewC62Sa8" data-description="This is a VR application that teaches users how to perform basic first aid skills in emergency situations. like CPR, Stop Bleeding injures, Choking for Adult and Toddler and how to use the AMD device " data-title="First Aid" data-toggle="modal" data-target="#videoModal">
                     <a target="_blank">
                         <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
                             <div class="overlay"></div>
@@ -356,7 +356,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-8 video" data-video="https://www.youtube.com/embed/3selk4rsfS0" data-description="Safety on Constriction Sites" data-title="Safety on Constriction Sites" data-toggle="modal" data-target="#videoModal">
+                <div class="col-md-8 video" data-video="https://www.youtube.com/embed/3selk4rsfS0" data-description="A VR application that simulates various hazards and risks on construction sites and trains users how to avoid or deal with them. The application uses realistic physics and sound effects to create an immersive and engaging experience." data-title="Safety on Constriction Sites" data-toggle="modal" data-target="#videoModal">
                     <a target="_blank">
                         <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
                             <div class="overlay"></div>
@@ -386,7 +386,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="row">
-                        <div class="col-md-12 video" data-video="https://www.youtube.com/embed/e0EA8qgiu8Q" data-description="16-valve four-cylinder engine" data-title="16-valve four-cylinder engine" data-toggle="modal" data-target="#videoModal">
+                        <div class="col-md-12 video" data-video="https://www.youtube.com/embed/e0EA8qgiu8Q" data-description="A virtual engine model that can be projected onto a real environment using HoloLens 2. The engine has four cylinders with four valves each and uses a DOHC design. The engine allows users to interact with it and learn how it works." data-title="16-valve four-cylinder engine" data-toggle="modal" data-target="#videoModal">
                                 <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
                                     <div class="overlay"></div>
                                     <div class="text text-center p-4">
