--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
     </nav>
-    <section id="home-section" class="hero">
+    <section id="home-section" class="hero" id="homeSlider">
         <div class="home-slider  owl-carousel">
             <div class="slider-item ">
                 <div class="overlay"></div>
@@ -561,14 +561,15 @@
                     <div class="ftco-footer-widget mb-4 ml-md-4">
                         <h2 class="ftco-heading-2">Links</h2>
                         <ul class="list-unstyled">
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+                            <li><a href="#home-section" class="nav-link"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+                            <li><a href="#about-section" class="nav-link"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
+                            <li><a href="#services-section" class="nav-link"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
+                            <li><a href="#projects-section" class="nav-link"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
+                            <li><a href="#contact-section" class="nav-link"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
                         </ul>
                     </div>
                 </div>
+
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">Services</h2>
@@ -632,37 +633,7 @@
     <script src="js/main.js"></script>
     <script src="js/Popup.js"></script>
 
-    <div id="project-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            <div class="card-header">
-                                <h5 class="modal-title" id="myModalLabel">Weapon disAssemble &amp; assemble &amp; Shooting Range</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <video class="embed-responsive-item" controls>
-                                        <source src="https://www.youtube.com/watch?v=Ep1oB2GYJ0c" allowfullscreen>
-                                        Sorry, your browser doesn't support the video tag.
-                                    </video>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    </div>
-
-
-    <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+       <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
