--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="row">
                 <div class="col-md-4  video" data-video="https://www.youtube.com/embed/Ug3ewC62Sa8" data-description="This is a VR application that teaches users how to perform basic first aid skills in emergency situations. like CPR, Stop Bleeding injures, Choking for Adult and Toddler and how to use the AMD device " data-title="First Aid" data-toggle="modal" data-target="#videoModal">
                     <a target="_blank">
-                        <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+                        <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.webp);">
                             <div class="overlay"></div>
                             <div class="text text-center p-4">
                                 <h3><a>First Aid </a></h3>
@@ -358,7 +358,7 @@
                 </div>
                 <div class="col-md-8 video" data-video="https://www.youtube.com/embed/3selk4rsfS0" data-description="A VR application that simulates various hazards and risks on construction sites and trains users how to avoid or deal with them. The application uses realistic physics and sound effects to create an immersive and engaging experience." data-title="Safety on Constriction Sites" data-toggle="modal" data-target="#videoModal">
                     <a target="_blank">
-                        <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
+                        <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.webp);">
                             <div class="overlay"></div>
                             <div class="text text-center p-4">
                                 <h3><a>Safety on Constriction Sites</a></h3>
@@ -368,7 +368,7 @@
                     </a>
                 </div>
                 <div class="col-md-8">
-                        <div class="project img ftco-animate d-flex justify-content-center align-items-center video" style="background-image: url(images/project-1.jpg);" data-video="https://www.youtube.com/embed/zvvkiLfXqEU" data-description="This is a VR application that allows users to learn how to disassemble and assemble different types of weapons, as well as practice shooting in a virtual range. The application uses realistic physics and sound effects to create an immersive and engaging experience." data-title="Weapon disAssemble &amp; assemble &amp; Shooting Range" data-toggle="modal" data-target="#videoModal">
+                        <div class="project img ftco-animate d-flex justify-content-center align-items-center video" style="background-image: url(images/project-1.webp);" data-video="https://www.youtube.com/embed/zvvkiLfXqEU" data-description="This is a VR application that allows users to learn how to disassemble and assemble different types of weapons, as well as practice shooting in a virtual range. The application uses realistic physics and sound effects to create an immersive and engaging experience." data-title="Weapon disAssemble &amp; assemble &amp; Shooting Range" data-toggle="modal" data-target="#videoModal">
                             <div class="overlay"></div>
                             <div class="text text-center p-4">
                                 <h3>
@@ -376,7 +376,7 @@
                                 </h3> <span>VR Application</span>
                             </div>
                         </div>
-                        <div class="project img ftco-animate d-flex justify-content-center align-items-center video" style="background-image: url(images/project-6.png);"data-video="https://www.youtube.com/embed/jBNhphdaMmI" data-description="Omani Culture" data-title="Omani Culture" data-toggle="modal" data-target="#videoModal">
+                        <div class="project img ftco-animate d-flex justify-content-center align-items-center video" style="background-image: url(images/project-6.webp);"data-video="https://www.youtube.com/embed/jBNhphdaMmI" data-description="Omani Culture" data-title="Omani Culture" data-toggle="modal" data-target="#videoModal">
                             <div class="overlay"></div>
                             <div class="text text-center p-4">
                                 <h3><a>Omani Culture</a></h3>
@@ -387,7 +387,7 @@
                 <div class="col-md-4">
                     <div class="row">
                         <div class="col-md-12 video" data-video="https://www.youtube.com/embed/e0EA8qgiu8Q" data-description="A virtual engine model that can be projected onto a real environment using HoloLens 2. The engine has four cylinders with four valves each and uses a DOHC design. The engine allows users to interact with it and learn how it works." data-title="16-valve four-cylinder engine" data-toggle="modal" data-target="#videoModal">
-                                <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
+                                <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.webp);">
                                     <div class="overlay"></div>
                                     <div class="text text-center p-4">
                                         <h3>
@@ -397,7 +397,7 @@
                                 </div>
                         </div>
                         <div class="col-md-12 video" data-video="https://www.youtube.com/embed/6iTcABA1FiA" data-description="Omani Designer" data-title="Omani Designer" data-toggle="modal" data-target="#videoModal">
-                                <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.png);">
+                                <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.webp);">
                                     <div class="overlay"></div>
                                     <div class="text text-center p-4">
                                         <h3><a>Omani Designer</a></h3>
