--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -27,6 +28,7 @@
     <link rel="stylesheet" href="css/flaticon.css" />
     <link rel="stylesheet" href="css/icomoon.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/MR.css">
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
     <nav
@@ -105,8 +107,7 @@
                   <h2 class="mb-4">A XR Software Engineer</h2>
                   <p>
                     <a href="#contact-section" class="btn btn-primary py-3 px-4"
-                      >Hire me</a
-                    >
+                      >Hire me</a>
                     <a
                       href="https://youtube.com/playlist?list=PL-dAP2-PcR0aGjIKVtSlX_21uDcLsx-l-&si=yXZ1SEm7Nk6WJU5A"
                       target="_blank"
@@ -140,19 +141,16 @@
                 <div class="text">
                   <span class="subheading">Hello!</span>
                   <h1 class="mb-4 mt-3">
-                    I'm a <span>Software Engineer</span> specialized in XR
-                    developement
-                  </h1>
+                    I'm a <span>Software Engineer</span></h1>
+                  <h2 class="mb-4">Specialized in XR development</h2> 
                   <p>
                     <a href="#contact-section" class="btn btn-primary py-3 px-4"
-                      >Hire me</a
-                    >
+                      >Hire me</a>
                     <a
                       href="https://youtube.com/playlist?list=PL-dAP2-PcR0aGjIKVtSlX_21uDcLsx-l-&si=yXZ1SEm7Nk6WJU5A"
                       target="_blank"
                       class="btn btn-white btn-outline-white py-3 px-4"
-                      >My works</a
-                    >
+                      >My works</a>
                   </p>
                 </div>
               </div>
@@ -332,7 +330,7 @@
           <div class="col-md-4 text-center d-flex ftco-animate">
             <a href="#" class="services-1">
               <span class="icon">
-                <i class="flaticon-analysis"></i>
+                <i class="bi bi-headset-vr"></i>
               </span>
               <div class="desc">
                 <h3 class="mb-5">Virtual Reality</h3>
@@ -342,7 +340,7 @@
           <div class="col-md-4 text-center d-flex ftco-animate">
             <a href="#" class="services-1">
               <span class="icon">
-                <i class="flaticon-flasks"></i>
+                <i class="bi bi-badge-ar"></i>
               </span>
               <div class="desc">
                 <h3 class="mb-5">Augmented Reality</h3>
@@ -352,7 +350,11 @@
           <div class="col-md-4 text-center d-flex ftco-animate">
             <a href="#" class="services-1">
               <span class="icon">
-                <i class="flaticon-ideas"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" style="fill: #ffbd39; width: 65px; height: 65px; "
+                onmouseover="this.style.fill='white'" onmouseout="this.style.fill='#ffbd39';"
+ text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 414.89">
+    <path fill-rule="nonzero" d="M80.058 0h351.889c21.902 0 41.854 9.115 56.353 23.619C502.917 38.236 512 58.373 512 80.226v254.438c0 21.804-9.175 41.898-23.766 56.477-14.574 14.58-34.591 23.749-56.287 23.749H80.058c-21.744 0-41.827-9.076-56.423-23.683C9.121 376.698 0 356.686 0 334.664V80.226c0-22.065 9.028-42.131 23.57-56.672C38.101 9.022 58.101 0 80.058 0zm25.954 135.666h48.52l33.358 81.318h1.678l33.359-81.318h48.519v143.558h-38.128v-82.996h-1.151l-31.941 81.878h-22.994l-31.973-82.437h-1.119v83.555h-38.128V135.666zm270.838 90.058l29.143 53.5h-42.338l-25.188-47.373h-28.926v-30.294h29.181c4.568 0 8.485-.56 11.706-1.711 3.259-1.152 5.758-2.993 7.502-5.492 1.776-2.537 2.635-5.823 2.635-9.903 0-4.112-.859-7.469-2.635-10.033-1.744-2.602-4.243-4.541-7.502-5.758-3.221-1.249-7.138-1.874-11.706-1.874h-13.754v112.438h-38.981V135.666h61.975c10.658 0 19.969 1.939 27.965 5.823 7.99 3.879 14.21 9.473 18.653 16.742 4.438 7.3 6.644 16.052 6.644 26.22 0 10.294-2.271 18.947-6.845 26.02-4.237 6.578-10.093 11.663-17.529 15.253zm55.097-192.393H80.058c-13.004 0-24.792 5.286-33.293 13.787-8.496 8.495-13.771 20.218-13.771 33.108v254.438c0 12.809 5.34 24.488 13.836 32.978 8.577 8.583 20.403 13.917 33.228 13.917h351.889c12.744 0 24.515-5.399 33.092-13.982 8.572-8.566 13.967-20.283 13.967-32.913V80.226c0-12.711-5.33-24.471-13.901-33.043-8.501-8.501-20.24-13.852-33.158-13.852z"/>
+</svg>
               </span>
               <div class="desc">
                 <h3 class="mb-5">Mixed Reality</h3>
@@ -363,7 +365,7 @@
           <div class="col-md-4 text-center d-flex ftco-animate">
             <a href="#" class="services-1">
               <span class="icon">
-                <i class="flaticon-analysis"></i>
+                <i class="bi bi-unity"></i>
               </span>
               <div class="desc">
                 <h3 class="mb-5">Unity 2D</h3>
@@ -373,7 +375,7 @@
           <div class="col-md-4 text-center d-flex ftco-animate">
             <a href="#" class="services-1">
               <span class="icon">
-                <i class="flaticon-flasks"></i>
+                <i class="bi bi-unity"></i>
               </span>
               <div class="desc">
                 <h3 class="mb-5">Unity 3D</h3>
@@ -383,7 +385,7 @@
           <div class="col-md-4 text-center d-flex ftco-animate">
             <a href="#" class="services-1">
               <span class="icon">
-                <i class="flaticon-ideas"></i>
+                <i class="bi bi-controller"></i>
               </span>
               <div class="desc">
                 <h3 class="mb-5">Game Development</h3>
