--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
                   </li>
                   <li class="d-flex">
                     <span>Address:</span>
-                    <span>Ring Road, EI Katameya, Cairo, Egypt</span>
+                    <span>Sports City Dubai</span>
                   </li>
                   <li class="d-flex">
                     <span>Email:</span> <span>Mohammref312@gmail.com</span>
                   </li>
                   <li class="d-flex">
-                    <span>Phone: </span> <span>+02-01118996898</span>
+                    <span>Phone: </span> <span>+791-583044548</span>
                   </li>
                 </ul>
               </div>
@@ -715,7 +715,7 @@
                 <span class="icon-map-signs"></span>
               </div>
               <h3 class="mb-4">Address</h3>
-              <p>Ring Road, EI Katameya, Cairo, Egypt</p>
+              <p>Sports City Dubai</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -726,7 +726,7 @@
                 <span class="icon-phone2"></span>
               </div>
               <h3 class="mb-4">Contact Number</h3>
-              <p><a href="tel://1234567920">+02 01118996898</a></p>
+              <p><a href="tel://1234567920">+971 583044548</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -798,7 +798,7 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
               <p>
-                Experienced Unity developer with 5+ years in VR, AR, and mobile
+                Experienced Unity developer with 6+ years in VR, AR, and mobile
                 games. Proficient in programming, design patterns, and versatile
                 in meeting tight deadlines for top-budget productions.
               </p>
@@ -916,13 +916,13 @@
                   <li>
                     <span class="icon icon-map-marker"></span
                     ><span class="text"
-                      >Ring Road, EI Katameya, Cairo, Egypt</span
+                      >Sports City Dubai</span
                     >
                   </li>
                   <li>
                     <a href="#"
                       ><span class="icon icon-phone"></span
-                      ><span class="text">+02 01118996898</span></a
+                      ><span class="text">+971 583044548</span></a
                     >
                   </li>
                   <li>
