--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <h1 class="big">About</h1>
                 <h2 class="mb-4">About Me</h2>
                 <p>
-                  Passionate Unity developer with 5+ years creating immersive
+                  Passionate Unity developer with 7+ years creating immersive
                   experiences in VR, AR, and mobile games. Expertise in
                   programming, design patterns, and a commitment to delivering
                   high-quality projects.
@@ -198,7 +198,7 @@
                     <span>Email:</span> <span>Mohammref312@gmail.com</span>
                   </li>
                   <li class="d-flex">
-                    <span>Phone: </span> <span>+791-583044548</span>
+                    <span>Phone: </span> <span>+971 583044548</span>
                   </li>
                 </ul>
               </div>
