--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <h2 class="mb-4">Resume</h2>
             <p>
               Experienced software developer specializing in Unity, with a focus
-              on Virtual Reality, Augmented Reality, and mobile games. Proven
+              on Virtual Reality, Mobile games, and  Augmented Reality. Proven
               track record of contributing to top-budget productions, meeting
               tight deadlines, and demonstrating proficiency in programming
               fundamentals and design patterns. Possesses a keen eye for design
