--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                         <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.webp)">
                             <div class="overlay"></div>
                             <div class="text text-center p-4">
-                                <h3><a>Safety on Constriction Sites</a></h3>
+                                <h3><a>Safety on Construction Sites</a></h3>
                                 <span>VR Application</span>
                             </div>
                         </div>
@@ -554,7 +554,7 @@
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3>
-                                <a>Weapon disAssemble &amp; assemble &amp; Shooting Range</a>
+                                <a>Weapon Disassemble &amp; assemble &amp; Shooting Range</a>
                             </h3>
                             <span>VR Application</span>
                         </div>
@@ -789,7 +789,7 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
               <p>
-                Experienced Unity developer with 6+ years in VR, AR, and mobile
+                Experienced Unity developer with 7+ years in VR, AR, and mobile
                 games. Proficient in programming, design patterns, and versatile
                 in meeting tight deadlines for top-budget productions.
               </p>
