--- a/index.html
+++ b/index.html
@@ -775,9 +775,14 @@
 
         <div class="col-md-6 d-flex">
           <div
-            class="img"
+            class="img position-relative"
             style="background-image: url(images/about.webp)"
-          ></div>
+          >
+            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
+              <h5>Let's Connect!</h5>
+              <i class="bi bi-envelope-fill fs-2"></i>
+            </div>
+          </div>
         </div>
       </div>
     </section>
